--- a/.gitmodules
+++ b/.gitmodules
@@ -39,3 +39,7 @@
 	path = bundle/vim-tmux-navigator
 	url = https://github.com/christoomey/vim-tmux-navigator.git
 	branch = master
+[submodule "bundle/nerdtree"]
+	path = bundle/nerdtree
+	url = https://github.com/scrooloose/nerdtree.git
+	branch = master
